plugins {
	id 'org.springframework.boot' version '3.0.0'
	id 'org.flywaydb.flyway' version '9.8.2'
	id 'java'
}

group = 'com.thinkbigthings'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

ext {
	set('testcontainersVersion', "1.17.3")
}

// use preview features
tasks.withType(JavaCompile) {
	options.compilerArgs += "--enable-preview"
	// options.compilerArgs += "-Xlint:preview"
	options.compilerArgs += "-Xlint:unchecked"
	options.compilerArgs += "-Xlint:deprecation"
}
tasks.withType(Test) {
	jvmArgs += "--enable-preview"
	environment "TESTCONTAINERS_REUSE_ENABLE", "true"
}
tasks.withType(JavaExec) {
	jvmArgs += '--enable-preview'
}

dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.0'
	runtimeOnly 'org.postgresql:postgresql:42.5.0'
	testImplementation 'org.testcontainers:postgresql:1.17.3'

	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.0'

	implementation 'org.flywaydb:flyway-core:9.8.2'

	implementation 'org.springframework.boot:spring-boot-starter-web:3.0.0'

	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.0'
	testImplementation 'org.testcontainers:junit-jupiter:1.17.3'
	testImplementation 'net.datafaker:datafaker:1.6.0'

	// for mocking final classes (records)
	testImplementation 'org.mockito:mockito-inline:4.8.0'

	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:3.0.0"

}

//dependencyManagement {
//	imports {
//		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
//	}
//}

tasks.named('test') {
	useJUnitPlatform()
}
